Add schemes to project.yml

--- a/project.yml
+++ b/project.yml
@@ -42,3 +42,13 @@ targets:
       - target: Kakebo
       - carthage: Quick
       - carthage: Nimble
+
+schemes:
+  Kakebo:
+    build:
+      targets:
+        Kakebo: all
+    test:
+      gatherCoverageData: true
+      targets:
+        - KakeboTests
