Added xcodegen to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: swift
 osx_image: xcode10.2
+
 xcode_project: Kakebo.xcodeproj
 xcode_scheme: KakeboTests
 xcode_destination: platform=iOS Simulator,OS=12.0,name=iPhone X
@@ -7,6 +8,9 @@ xcode_destination: platform=iOS Simulator,OS=12.0,name=iPhone X
 before_install:
   - brew install carthage || true
   - brew outdated carthage || brew upgrade carthage
+  - brew install xcodegen || true
+  - brew outdated xcodegen || brew upgrade xcodegen
 
 before_script:
   - carthage bootstrap --platform iOS --no-use-binaries --cache-builds
+  - xcodegen
