--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ before_install:
   - brew outdated xcodegen || brew upgrade xcodegen
 
 before_script:
-  - carthage bootstrap --platform iOS --cache-builds
+  - carthage bootstrap --platform iOS --cache-builds --verbose
   - xcodegen
