--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ cache:
     - Carthage
 
 xcode_project: Kakebo.xcodeproj
-xcode_scheme: KakeboTests
-xcode_destination: platform=iOS Simulator,OS=12.0,name=iPhone X
+xcode_scheme: Kakebo
+xcode_destination: platform=iOS Simulator,OS=12.2,name=iPhone X
 
 before_install:
   - brew install carthage || true
@@ -15,5 +15,5 @@ before_install:
   - brew outdated xcodegen || brew upgrade xcodegen
 
 before_script:
-  - carthage bootstrap --platform iOS --cache-builds --verbose
+  - travis_wait carthage bootstrap --platform iOS --cache-builds
   - xcodegen
