--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ before_install:
   - brew outdated xcodegen || brew upgrade xcodegen
 
 before_script:
-  - travis_wait carthage bootstrap --platform iOS --cache-builds
+  - travis_wait 30 carthage bootstrap --platform iOS --cache-builds
   - xcodegen
