--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,9 @@ before_install:
   - brew outdated carthage || brew upgrade carthage
   - brew install xcodegen || true
   - brew outdated xcodegen || brew upgrade xcodegen
+  - rvm use $RVM_RUBY_VERSION
+
+install: bundle install --without=documentation --path ../travis_bundle_dir
 
 before_script:
   - travis_wait 60 carthage bootstrap --platform iOS --cache-builds
@@ -24,5 +27,5 @@ before_script:
 
 after_success:
   - slather
-  - bash <(curl -s https://codecov.io/bash) -f slather/cobertura.xml -X coveragepy -X gcov -X xcode
+  - bash <(curl -s https://codecov.io/bash) -f slather/c  obertura.xml -X coveragepy -X gcov -X xcode
   
