--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ osx_image: xcode10.2
 env:
   - CODECOV_TOKEN="dad7732d-7fb3-472e-82c0-a3234ce83b8d"
 
-xcode_project: Kakebo.xcodeproj
+xcode_workspace: Kakebo.xcworkspace
 xcode_scheme: Kakebo
 xcode_destination: platform=iOS Simulator,OS=12.2,name=iPhone X
 
