--- a/.slather.yml
+++ b/.slather.yml
@@ -4,3 +4,10 @@ workspace: Kakebo.xcworkspace
 scheme: Kakebo
 source_directory: Kakebo
 output_directory: slather
+
+ignore:
+  - "**/AppDelegate.swift"
+  - "**/*View.swift"
+  - "**/*ViewController.swift"
+  - "**/*Cell.swift"
+  - "**/*ModuleBuilder.swift"
