Improved ignored files for coverage

--- a/.slather.yml
+++ b/.slather.yml
@@ -11,3 +11,10 @@ ignore:
   - "**/*ViewController.swift"
   - "**/*Cell.swift"
   - "**/*ModuleBuilder.swift"
+  - "**/*Button.swift"
+  - "**/*Style.swift"
+  - "**/*Localization.swift"
+  - "**/Extensions/View/*.swift"
+  - "**/*Router.swift"
+  - "**/RealmExpensesRepositoryFactory.swift"
+  - "**/Color+hex.swift"
