--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: swift
-osx_image: xcode10.2
+osx_image: xcode11.3
 
 env:
   - CODECOV_TOKEN="dad7732d-7fb3-472e-82c0-a3234ce83b8d"
@@ -11,7 +11,8 @@ xcode_destination: platform=iOS Simulator,OS=12.2,name=iPhone X
 before_install:
   - rvm use $RVM_RUBY_VERSION
 
-install: bundle install --without=documentation --path ../travis_bundle_dir
+install: 
+  - bundle install --without=documentation --path ../travis_bundle_dir
 
 after_success:
   - bundle exec slather
