--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ env:
 
 xcode_workspace: Kakebo.xcworkspace
 xcode_scheme: Kakebo
-xcode_destination: platform=iOS Simulator,OS=12.2,name=iPhone X
+xcode_destination: platform=iOS Simulator,OS=13.4,name=iPhone 11
 
 before_install:
   - rvm use $RVM_RUBY_VERSION
